Remove Bluetooth adapter status UMA.

BUG=692570

Review-Url: https://codereview.chromium.org/2702683003
Cr-Commit-Position: refs/heads/master@{#451518}

Former-commit-id: b218ccd8ae08ba89f2038c10a2aa746dff8a424d